# share

./: Cargo.toml  README.md
.github/: FUNDING.yml
src/: history.rs  lib.rs  main.rs  state.rs
src/app/: action.rs  history.rs  mod.rs  state.rs  ui.rs
src/comm/: mod.rs
src/contacts/: mod.rs
src/inputs/: event.rs  key.rs  mod.rs
src/io/: handler.rs  mod.rs
