[package]
name = "share"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
libp2p = "0.41.0"
serde = { version = "1.0.131", features = ["derive"] }
bincode = "1.3.3"
log = "0.4.14"
pretty_env_logger = "0.4"
futures = "0.3.18"
tui = { version = "0.15", features = ["crossterm"], default-features = false }
crossterm = "0.19"
tui-input = "*"
tui-logger = { git = "https://github.com/gin66/tui-logger", rev = "3a3568e2464dddc2205e071234135998342d7f1d" }
eyre = "0.6"
